responsive style is changed

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <div class="col-md-4">
               <h2>Profile</h2>
               <p>1984年 愛知県生まれ</p>
-              <p>大学でコンピューター専攻</p>
-              <p>大学院へ進み、画像処理の研究</p>
+              <p>大学  :コンピューター専攻</p>
+              <p>大学院: 画像処理の研究</p>
               <p>某ユーザー系の会社へSEとして入社</p>
             </div>
             <div class="col-md-4">
@@ -137,7 +137,7 @@
         <div class="col-md-4">
           <a href="https://github.com/imoritani" target="blank">
             <img src="images/icons/github-icon.png" alt="github-icon" class="snslogo">
-            <p class="sns_title">github</p>
+            <p class="sns_title">Github</p>
           </a>
         </div>
         <div class="col-md-4">
