navbar is automaticaslly closed on click

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <!-- BootstrapのJS読み込み -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    
+    <script>
+　　　　$(document).ready(function () {
+　　　　  $(".navbar-nav li a").click(function(event) {
+　　　　    $(".navbar-collapse").collapse('hide');
+　　　　  });
+　　　　});
+　　</script>
+    
+});
   </head>
   <body>
 
